---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: ????
  Features:
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2023-03-09
  Changes:
    - Pumps are now drawn with a diode shape (by nekizalb)
  Bugfixes:
    - Fixed blue fluid colors being distorted to similar shaded of cyan
    - Fixed that fluid-burning labs would not be visualized
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2022-03-18
  Changes:
    - Improved shortcut icons
  Bugfixes:
    - Fixed a crash when hovering over a flamethrower (#9)
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2022-03-16
  Bugfixes:
    - Fixed a crash when hovering a reactor with a fluid energy source (#8)
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2022-03-14
  Bugfixes:
    - Fixed a crash when iterating a reactor with a fluid energy source (#8)
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2022-02-27
  Bugfixes:
    - Fixed a crash when starting a new freeplay game (#5)
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2022-02-24
  Features:
    - Initial release