@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.6
 Date: ????
-  Features:
+  Bugfixes:
+    - Fixed that the visualizer would show two output-only fluidboxes as connected (#11)
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.5
 Date: 2023-03-09
